// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert > snap 1`] = `
".alert {
  @apply rounded-box border p-4 text-base-content border-base-200;
}
.alert-primary {
  @apply text-primary-content border-primary/20 bg-primary;
}
.alert-info {
  @apply text-info-content border-info/20 bg-info;
}
.alert-success {
  @apply text-success-content border-success/20 bg-success;
}
.alert-warning {
  @apply text-warning-content border-warning/20 bg-warning;
}
.alert-error {
  @apply text-error-content border-error/20 bg-error;
}
.alert-neutral {
  @apply text-neutral-content border-neutral/20 bg-neutral;
}"
`;

exports[`avatar > snap 1`] = `
".avatar-group {
  @apply flex overflow-hidden;
}
.avatar-group :where(.avatar) {
  @apply border-base-100 overflow-hidden rounded-full border-4;
}"
`;

exports[`badge > snap 1`] = `
".badge {
  @apply rounded-badge border border-base-200 bg-base-100 text-base-content;
}
.badge-primary {
  @apply border-primary bg-primary text-primary-content;
}
.badge-info {
  @apply border-info bg-info text-info-content;
}
.badge-success {
  @apply border-success bg-success text-success-content;
}
.badge-warning {
  @apply border-warning bg-warning text-warning-content;
}
.badge-error {
  @apply border-error bg-error text-error-content;
}
.badge-neutral {
  @apply border-neutral bg-neutral text-neutral-content;
}
.badge-ghost {
  @apply border-base-200 bg-base-200 text-base-content;
}
.badge-outline {
  @apply border-current border-opacity-50 bg-transparent text-current;
}
.badge-outline.badge-primary {
  @apply text-primary;
}
.badge-outline.badge-info {
  @apply text-info;
}
.badge-outline.badge-success {
  @apply text-success;
}
.badge-outline.badge-warning {
  @apply text-warning;
}
.badge-outline.badge-error {
  @apply text-error;
}
.badge-outline.badge-neutral {
  @apply text-neutral;
}"
`;

exports[`bottom-navigation > snap 1`] = `
".btm-nav {
  @apply bg-base-100 h-16 text-current;
}
.btm-nav > * {
  @apply border-current;
  /* disabled */
}
.btm-nav > *:not(.active) {
  @apply pt-0.5;
}
.btm-nav > *:where(.active) {
  @apply bg-base-100 border-t-2;
}
.btm-nav > *.disabled, .btm-nav > *[disabled] {
  @apply bg-neutral text-base-content pointer-events-none border-opacity-0 bg-opacity-10 text-opacity-20;
}
.btm-nav > *.disabled:hover, .btm-nav > *[disabled]:hover {
  @apply bg-neutral text-base-content pointer-events-none border-opacity-0 bg-opacity-10 text-opacity-20;
}
.btm-nav > * .label {
  @apply text-base;
}"
`;

exports[`breadcrumbs > snap 1`] = `
".breadcrumbs {
  @apply py-2;
}
.breadcrumbs > ul > li > a:focus, .breadcrumbs > ol > li > a:focus {
  @apply outline-none;
}
.breadcrumbs > ul > li > a:focus-visible, .breadcrumbs > ol > li > a:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}
.breadcrumbs > ul > li + *:before, .breadcrumbs > ol > li + *:before {
  content: \\"\\";
  @apply ml-2 mr-3 block h-1.5 w-1.5 rotate-45 transform opacity-40;
  border-top: 1px solid;
  border-right: 1px solid;
  background-color: transparent;
}

[dir=rtl] .breadcrumbs > ul > li + *:before,
[dir=rtl] .breadcrumbs > ol > li + *:before {
  --tw-rotate: -45deg;
}"
`;

exports[`button > snap 1`] = `
".btn {
  @apply border-base-200 bg-base-200 text-base-content outline-base-200 no-underline;
  border-width: var(--ice-border-btn, 1px);
}
.btn:focus-visible {
  @apply outline outline-2 outline-offset-2;
}
.btn:active {
  @apply border-base-300 bg-base-300;
}
.btn.btn-active {
  @apply border-base-300 bg-base-300;
}
.btn-primary {
  @apply border-primary bg-primary text-primary-content outline-primary;
}
.btn-primary:active {
  @apply border-primary-focus bg-primary-focus;
}
.btn-primary.btn-active {
  @apply border-primary-focus bg-primary-focus;
}
.btn-info {
  @apply border-info bg-info text-info-content outline-info;
}
.btn-info:active {
  @apply border-info-focus bg-info-focus;
}
.btn-info.btn-active {
  @apply border-info-focus bg-info-focus;
}
.btn-success {
  @apply border-success bg-success text-success-content outline-success;
}
.btn-success:active {
  @apply border-success-focus bg-success-focus;
}
.btn-success.btn-active {
  @apply border-success-focus bg-success-focus;
}
.btn-warning {
  @apply border-warning bg-warning text-warning-content outline-warning;
}
.btn-warning:active {
  @apply border-warning-focus bg-warning-focus;
}
.btn-warning.btn-active {
  @apply border-warning-focus bg-warning-focus;
}
.btn-error {
  @apply border-error bg-error text-error-content outline-error;
}
.btn-error:active {
  @apply border-error-focus bg-error-focus;
}
.btn-error.btn-active {
  @apply border-error-focus bg-error-focus;
}
.btn-neutral {
  @apply border-neutral bg-neutral text-neutral-content outline-neutral;
}
.btn-neutral:active {
  @apply border-neutral-focus bg-neutral-focus;
}
.btn-neutral.btn-active {
  @apply border-neutral-focus bg-neutral-focus;
}
.btn.glass {
  @apply shadow-none outline-current;
}
.btn.glass:active {
  --ice-glass-opacity: 25%;
  --ice-glass-border-opacity: 15%;
}
.btn.glass.btn-active {
  --ice-glass-opacity: 25%;
  --ice-glass-border-opacity: 15%;
}
.btn-ghost {
  @apply border border-transparent bg-transparent text-current shadow-none outline-current;
}
.btn-ghost:active {
  @apply border-opacity-0 bg-base-content bg-opacity-20;
}
.btn-ghost.btn-active {
  @apply border-opacity-0 bg-base-content bg-opacity-20;
}
.btn-link {
  @apply text-primary border-transparent bg-transparent underline shadow-none outline-current;
}
.btn-link:active {
  @apply border-transparent bg-transparent underline;
}
.btn-link.btn-active {
  @apply border-transparent bg-transparent underline;
}
.btn-outline {
  @apply border-current bg-transparent shadow-none text-base-content;
}
.btn-outline:active {
  @apply border-base-content bg-base-content text-base-100;
}
.btn-outline.btn-active {
  @apply border-base-content bg-base-content text-base-100;
}
.btn-outline.btn-primary {
  @apply text-primary;
}
.btn-outline.btn-primary:active {
  @apply border-primary-focus bg-primary-focus text-primary-content;
}
.btn-outline.btn-primary.btn-active {
  @apply border-primary-focus bg-primary-focus text-primary-content;
}
.btn-outline.btn-info {
  @apply text-info;
}
.btn-outline.btn-info:active {
  @apply border-info-focus bg-info-focus text-info-content;
}
.btn-outline.btn-info.btn-active {
  @apply border-info-focus bg-info-focus text-info-content;
}
.btn-outline.btn-success {
  @apply text-success;
}
.btn-outline.btn-success:active {
  @apply border-success-focus bg-success-focus text-success-content;
}
.btn-outline.btn-success.btn-active {
  @apply border-success-focus bg-success-focus text-success-content;
}
.btn-outline.btn-warning {
  @apply text-warning;
}
.btn-outline.btn-warning:active {
  @apply border-warning-focus bg-warning-focus text-warning-content;
}
.btn-outline.btn-warning.btn-active {
  @apply border-warning-focus bg-warning-focus text-warning-content;
}
.btn-outline.btn-error {
  @apply text-error;
}
.btn-outline.btn-error:active {
  @apply border-error-focus bg-error-focus text-error-content;
}
.btn-outline.btn-error.btn-active {
  @apply border-error-focus bg-error-focus text-error-content;
}
.btn-outline.btn-neutral {
  @apply text-neutral;
}
.btn-outline.btn-neutral:active {
  @apply border-neutral-focus bg-neutral-focus text-neutral-content;
}
.btn-outline.btn-neutral.btn-active {
  @apply border-neutral-focus bg-neutral-focus text-neutral-content;
}
.btn.btn-disabled, .btn[disabled], .btn:disabled {
  @apply bg-neutral text-base-content border-opacity-0 bg-opacity-20 text-opacity-20;
}

.btn:is(input[type=checkbox]:checked),
.btn:is(input[type=radio]:checked) {
  @apply border-primary bg-primary text-primary-content;
}
.btn:is(input[type=checkbox]:checked):active,
.btn:is(input[type=radio]:checked):active {
  @apply border-primary-focus bg-primary-focus;
}
.btn:is(input[type=checkbox]:checked):focus-visible,
.btn:is(input[type=radio]:checked):focus-visible {
  @apply outline-primary;
}"
`;

exports[`card > snap 1`] = `
".card {
  @apply rounded-box;
}
.card :where(figure:first-child) {
  @apply overflow-hidden;
  border-start-start-radius: inherit;
  border-start-end-radius: inherit;
  border-end-start-radius: unset;
  border-end-end-radius: unset;
}
.card :where(figure:last-child) {
  @apply overflow-hidden;
  border-start-start-radius: unset;
  border-start-end-radius: unset;
  border-end-start-radius: inherit;
  border-end-end-radius: inherit;
}
.card:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}
.card.bordered {
  @apply border-base-200 border;
}
.card-bordered {
  @apply border-base-200 border;
}
.card.compact .card-body {
  @apply p-4 text-sm;
}
.card-body {
  padding: var(--ice-padding-card, 2rem);
  @apply flex flex-col gap-2;
}
.card-title {
  @apply flex items-center gap-2 text-xl font-semibold;
}
.card.image-full:before {
  @apply bg-neutral rounded-box z-10 opacity-75;
}
.card.image-full > .card-body {
  @apply text-neutral-content z-20;
}
.card.image-full :where(figure) {
  @apply overflow-hidden;
  border-radius: inherit;
}"
`;

exports[`carousel > snap 1`] = `
".carousel {
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.carousel::-webkit-scrollbar {
  @apply hidden;
}"
`;

exports[`chat > snap 1`] = `
".chat-bubble {
  @apply bg-neutral text-neutral-content rounded-box;
  min-height: 2.75rem;
  min-width: 2.75rem;
}
.chat-bubble-primary {
  @apply bg-primary text-primary-content;
}
.chat-bubble-info {
  @apply bg-info text-info-content;
}
.chat-bubble-success {
  @apply bg-success text-success-content;
}
.chat-bubble-warning {
  @apply bg-warning text-warning-content;
}
.chat-bubble-error {
  @apply bg-error text-error-content;
}
.chat-bubble-neutral {
  @apply bg-neutral text-neutral-content;
}
.chat-start .chat-bubble {
  @apply rounded-bl-none;
}
.chat-start .chat-bubble:before {
  left: -0.749rem;
}
.chat-end .chat-bubble {
  @apply rounded-br-none;
}
.chat-end .chat-bubble:before {
  left: 99.9%;
}"
`;

exports[`checkbox > snap 1`] = `
".checkbox {
  @apply border-base-content rounded-btn h-6 w-6 cursor-pointer appearance-none border border-opacity-20;
}
.checkbox:focus-visible {
  @apply outline-base-content outline outline-2 outline-offset-2;
}
.checkbox:checked, .checkbox[checked=true], .checkbox[aria-checked=true] {
  @apply bg-base-content bg-no-repeat;
  animation: checkmark var(--ice-animation-input, 0.2s) ease-out;
}
.checkbox:indeterminate {
  @apply bg-base-content bg-no-repeat;
  animation: checkmark var(--ice-animation-input, 0.2s) ease-out;
}
.checkbox-primary {
  @apply border-primary [@media(hover:hover)]:hover:border-primary;
}
.checkbox-primary:focus-visible {
  @apply outline-primary;
}
.checkbox-primary:checked, .checkbox-primary[checked=true], .checkbox-primary[aria-checked=true] {
  @apply border-primary bg-primary text-primary-content;
}
.checkbox-info {
  @apply border-info [@media(hover:hover)]:hover:border-info;
}
.checkbox-info:focus-visible {
  @apply outline-info;
}
.checkbox-info:checked, .checkbox-info[checked=true], .checkbox-info[aria-checked=true] {
  @apply border-info bg-info text-info-content;
}
.checkbox-success {
  @apply border-success [@media(hover:hover)]:hover:border-success;
}
.checkbox-success:focus-visible {
  @apply outline-success;
}
.checkbox-success:checked, .checkbox-success[checked=true], .checkbox-success[aria-checked=true] {
  @apply border-success bg-success text-success-content;
}
.checkbox-warning {
  @apply border-warning [@media(hover:hover)]:hover:border-warning;
}
.checkbox-warning:focus-visible {
  @apply outline-warning;
}
.checkbox-warning:checked, .checkbox-warning[checked=true], .checkbox-warning[aria-checked=true] {
  @apply border-warning bg-warning text-warning-content;
}
.checkbox-error {
  @apply border-error [@media(hover:hover)]:hover:border-error;
}
.checkbox-error:focus-visible {
  @apply outline-error;
}
.checkbox-error:checked, .checkbox-error[checked=true], .checkbox-error[aria-checked=true] {
  @apply border-error bg-error text-error-content;
}
.checkbox-neutral {
  @apply border-neutral [@media(hover:hover)]:hover:border-neutral;
}
.checkbox-neutral:focus-visible {
  @apply outline-neutral;
}
.checkbox-neutral:checked, .checkbox-neutral[checked=true], .checkbox-neutral[aria-checked=true] {
  @apply border-neutral bg-neutral text-neutral-content;
}
.checkbox:disabled {
  @apply bg-base-content cursor-not-allowed border-transparent opacity-20;
}

@keyframes checkmark {
  0% {
    background-position-y: 5px;
  }
  50% {
    background-position-y: -2px;
  }
  100% {
    background-position-y: 0;
  }
}
/* backward compatibility */
.checkbox-mark {
  @apply hidden;
}"
`;

exports[`collapse > snap 1`] = `
"@charset \\"UTF-8\\";
.collapse {
  @apply rounded-box w-full;
}

details.collapse {
  @apply w-full;
}
details.collapse summary {
  @apply relative block;
}
details.collapse summary::-webkit-details-marker {
  @apply hidden;
}

.collapse:focus-visible {
  @apply outline-base-content outline outline-2 outline-offset-2;
}

details.collapse summary {
  @apply outline-none;
}

.collapse:has(.collapse-title:focus-visible),
.collapse:has(> input[type=checkbox]:focus-visible),
.collapse:has(> input[type=radio]:focus-visible) {
  @apply outline-base-content outline outline-2 outline-offset-2;
}

.collapse-arrow > .collapse-title:after {
  @apply absolute block h-2 w-2 translate-y-[-100%] rotate-[45deg] transition-all ease-out;
  transition-duration: 0.2s;
  top: 50%;
  right: 1.4rem;
  content: \\"\\";
  transform-origin: 75% 75%;
  box-shadow: 2px 2px;
  pointer-events: none;
}

[dir=rtl] .collapse-arrow > .collapse-title:after {
  --tw-rotate: -45deg;
}

.collapse-plus > .collapse-title:after {
  @apply absolute block h-2 w-2 transition-all duration-300 ease-out;
  top: 0.9rem;
  right: 1.4rem;
  content: \\"+\\";
  pointer-events: none;
}

.collapse:not(.collapse-open):not(.collapse-close) > input[type=checkbox],
.collapse:not(.collapse-open):not(.collapse-close) > input[type=radio]:not(:checked),
.collapse:not(.collapse-open):not(.collapse-close) > .collapse-title {
  @apply cursor-pointer;
}

.collapse:focus:not(.collapse-open):not(.collapse-close):not(.collapse[open]) > .collapse-title {
  cursor: unset;
}

.collapse-title {
  @apply relative;
}

:where(.collapse > input[type=checkbox]),
:where(.collapse > input[type=radio]) {
  z-index: 1;
}

.collapse-title,
:where(.collapse > input[type=checkbox]),
:where(.collapse > input[type=radio]) {
  @apply w-full p-4 pr-12;
  min-height: 3.75rem;
  transition: background-color 0.2s ease-out;
}

.collapse-content {
  @apply px-4;
  cursor: unset;
  transition: padding 0.2s ease-out, background-color 0.2s ease-out;
}

.collapse[open] > :where(.collapse-content),
.collapse-open > :where(.collapse-content),
.collapse:focus:not(.collapse-close) > :where(.collapse-content),
.collapse:not(.collapse-close) > :where(input[type=checkbox]:checked ~ .collapse-content),
.collapse:not(.collapse-close) > :where(input[type=radio]:checked ~ .collapse-content) {
  @apply pb-4;
  transition: padding 0.2s ease-out, background-color 0.2s ease-out;
}

.collapse[open].collapse-arrow > .collapse-title:after,
.collapse-open.collapse-arrow > .collapse-title:after,
.collapse-arrow:focus:not(.collapse-close) > .collapse-title:after,
.collapse-arrow:not(.collapse-close) > input[type=checkbox]:checked ~ .collapse-title:after,
.collapse-arrow:not(.collapse-close) > input[type=radio]:checked ~ .collapse-title:after {
  @apply translate-y-[-50%] rotate-[225deg];
}

[dir=rtl] .collapse[open].collapse-arrow > .collapse-title:after,
[dir=rtl] .collapse-open.collapse-arrow > .collapse-title:after,
[dir=rtl] .collapse-arrow:focus:not(.collapse-close) .collapse-title:after,
[dir=rtl] .collapse-arrow:not(.collapse-close) input[type=checkbox]:checked ~ .collapse-title:after {
  --tw-rotate: 135deg;
}

.collapse[open].collapse-plus > .collapse-title:after,
.collapse-open.collapse-plus > .collapse-title:after,
.collapse-plus:focus:not(.collapse-close) > .collapse-title:after,
.collapse-plus:not(.collapse-close) > input[type=checkbox]:checked ~ .collapse-title:after,
.collapse-plus:not(.collapse-close) > input[type=radio]:checked ~ .collapse-title:after {
  content: \\"−\\";
}"
`;

exports[`countdown > snap 1`] = `
".countdown > *:before {
  text-align: center;
  transition: all 1s cubic-bezier(1, 0, 0, 1);
}"
`;

exports[`divider > snap 1`] = `
".divider {
  @apply my-4 h-4 whitespace-nowrap;
}
.divider:before {
  @apply bg-base-content bg-opacity-10;
}
.divider:after {
  @apply bg-base-content bg-opacity-10;
}
.divider:not(:empty) {
  @apply gap-4;
}"
`;

exports[`drawer > snap 1`] = `
".drawer {
  width: 100%;
}
.drawer-side > .drawer-overlay {
  @apply cursor-pointer bg-transparent transition-colors duration-200 ease-out;
}
.drawer-toggle:checked ~ .drawer-side > .drawer-overlay {
  background-color: hsla(0, 0%, 0%, 0.4);
}
.drawer-toggle:focus-visible ~ .drawer-content label.drawer-button {
  @apply outline outline-2 outline-offset-2;
}"
`;

exports[`dropdown > snap 1`] = `
".dropdown:is(:not(details)) .dropdown-content {
  @apply origin-top scale-95 transform transition duration-200 ease-out;
}

.dropdown-bottom .dropdown-content {
  @apply origin-top;
}

.dropdown-top .dropdown-content {
  @apply origin-bottom;
}

.dropdown-left .dropdown-content {
  @apply origin-right;
}

.dropdown-right .dropdown-content {
  @apply origin-left;
}

.dropdown.dropdown-open .dropdown-content,
.dropdown:focus .dropdown-content,
.dropdown:focus-within .dropdown-content {
  @apply scale-100;
}

@media (hover: hover) {
  .dropdown.dropdown-hover:hover .dropdown-content {
    @apply scale-100;
  }
}"
`;

exports[`file-input > snap 1`] = `
".file-input {
  @apply border-base-content bg-base-100 rounded-btn overflow-hidden border border-opacity-0 text-base;
}
.file-input::file-selector-button {
  border-style: solid;
  @apply border-neutral bg-neutral text-neutral-content font-semibold uppercase no-underline;
  border-width: var(--ice-border-btn, 1px);
  animation: button-pop var(--ice-animation-btn, 0.25s) ease-out;
  text-transform: var(--ice-btn-text-case, uppercase);
}
.file-input-bordered {
  @apply border-opacity-20;
}
.file-input:focus {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.file-input-ghost {
  @apply bg-opacity-5;
}
.file-input-ghost:focus {
  @apply text-base-content bg-opacity-100;
  box-shadow: none;
}
.file-input-ghost::file-selector-button {
  @apply border border-transparent bg-transparent text-current;
}
.file-input-primary {
  @apply border-primary;
}
.file-input-primary:focus {
  @apply outline-primary;
}
.file-input-primary::file-selector-button {
  @apply border-primary bg-primary text-primary-content;
}
.file-input-info {
  @apply border-info;
}
.file-input-info:focus {
  @apply outline-info;
}
.file-input-info::file-selector-button {
  @apply border-info bg-info text-info-content;
}
.file-input-success {
  @apply border-success;
}
.file-input-success:focus {
  @apply outline-success;
}
.file-input-success::file-selector-button {
  @apply border-success bg-success text-success-content;
}
.file-input-warning {
  @apply border-warning;
}
.file-input-warning:focus {
  @apply outline-warning;
}
.file-input-warning::file-selector-button {
  @apply border-warning bg-warning text-warning-content;
}
.file-input-error {
  @apply border-error;
}
.file-input-error:focus {
  @apply outline-error;
}
.file-input-error::file-selector-button {
  @apply border-error bg-error text-error-content;
}
.file-input-neutral {
  @apply border-neutral;
}
.file-input-neutral:focus {
  @apply outline-neutral;
}
.file-input-neutral::file-selector-button {
  @apply border-neutral bg-neutral text-neutral-content;
}
.file-input-disabled, .file-input[disabled] {
  @apply border-base-200 bg-base-200 placeholder-base-content cursor-not-allowed text-opacity-20 placeholder-opacity-20;
}
.file-input-disabled::file-selector-button, .file-input[disabled]::file-selector-button {
  @apply bg-neutral text-base-content border-opacity-0 bg-opacity-20 text-opacity-20;
}"
`;

exports[`footer > snap 1`] = `
".footer {
  @apply gap-x-4 gap-y-10 text-sm;
}
.footer > * {
  @apply gap-2;
}
.footer-title {
  @apply mb-2 font-bold uppercase opacity-50;
}"
`;

exports[`form > snap 1`] = `
".label {
  @apply px-1 py-2;
}
.label-text {
  @apply text-base-content text-sm;
}
.label-text-alt {
  @apply text-base-content text-xs;
}
.label a {
  @apply [@media(hover:hover)]:hover:text-base-content;
}"
`;

exports[`hero > snap 1`] = `
".hero-overlay {
  @apply bg-neutral bg-opacity-50;
}
.hero-content {
  @apply max-w-7xl gap-4 p-4;
}"
`;

exports[`input > snap 1`] = `
".input {
  @apply border-base-content bg-base-100 rounded-btn border border-opacity-0 text-base;
  /* &::-webkit-calendar-picker-indicator {
    display: none;
  } */
}
.input input:focus {
  @apply outline-none;
}
.input[list]::-webkit-calendar-picker-indicator {
  line-height: 1em;
}
.input-bordered {
  @apply border-opacity-20;
}
.input:focus, .input:focus-within {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.input-ghost {
  @apply bg-opacity-5;
}
.input-ghost:focus, .input-ghost:focus-within {
  @apply text-base-content bg-opacity-100;
  box-shadow: none;
}
.input-primary {
  @apply border-primary;
}
.input-primary:focus, .input-primary:focus-within {
  @apply outline-primary;
}
.input-info {
  @apply border-info;
}
.input-info:focus, .input-info:focus-within {
  @apply outline-info;
}
.input-success {
  @apply border-success;
}
.input-success:focus, .input-success:focus-within {
  @apply outline-success;
}
.input-warning {
  @apply border-warning;
}
.input-warning:focus, .input-warning:focus-within {
  @apply outline-warning;
}
.input-error {
  @apply border-error;
}
.input-error:focus, .input-error:focus-within {
  @apply outline-error;
}
.input-neutral {
  @apply border-neutral;
}
.input-neutral:focus, .input-neutral:focus-within {
  @apply outline-neutral;
}
.input-disabled, .input:disabled, .input[disabled] {
  @apply border-base-200 bg-base-200 placeholder-base-content cursor-not-allowed text-opacity-20 placeholder-opacity-20;
}"
`;

exports[`join > snap 1`] = `
".join {
  @apply rounded-btn;
}
.join > :where(*:not(:first-child)) {
  @apply my-0 -ml-px;
}
.join-item:focus {
  @apply isolate;
}"
`;

exports[`kbd > snap 1`] = `
".kbd {
  @apply border-base-content bg-base-200 rounded-btn border border-opacity-20 px-2;
  border-bottom-width: 2px;
  min-height: 2.2em;
  min-width: 2.2em;
}"
`;

exports[`link > snap 1`] = `
".link-primary {
  @apply text-primary [@media(hover:hover)]:hover:text-primary-focus;
}
.link-info {
  @apply text-info [@media(hover:hover)]:hover:text-info-focus;
}
.link-success {
  @apply text-success [@media(hover:hover)]:hover:text-success-focus;
}
.link-warning {
  @apply text-warning [@media(hover:hover)]:hover:text-warning-focus;
}
.link-error {
  @apply text-error [@media(hover:hover)]:hover:text-error-focus;
}
.link-neutral {
  @apply text-neutral [@media(hover:hover)]:hover:text-neutral-focus;
}
.link:focus {
  @apply outline-none;
}
.link:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}"
`;

exports[`loading > snap 1`] = `
".loading {
  @apply pointer-events-none inline-block aspect-square w-6;
  background-color: currentColor;
  mask-size: 100%;
  mask-repeat: no-repeat;
  mask-position: center;
  mask-image: url(\\"data:image/svg+xml,%3Csvg width='24' height='24' stroke='%23000' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_V8m1%7Btransform-origin:center;animation:spinner_zKoa 2s linear infinite%7D.spinner_V8m1 circle%7Bstroke-linecap:round;animation:spinner_YpZS 1.5s ease-out infinite%7D%40keyframes spinner_zKoa%7B100%25%7Btransform:rotate(360deg)%7D%7D%40keyframes spinner_YpZS%7B0%25%7Bstroke-dasharray:0 150;stroke-dashoffset:0%7D47.5%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-16%7D95%25%2C100%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-59%7D%7D%3C%2Fstyle%3E%3Cg class='spinner_V8m1'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3'%3E%3C%2Fcircle%3E%3C%2Fg%3E%3C%2Fsvg%3E\\");
}

.loading-spinner {
  mask-image: url(\\"data:image/svg+xml,%3Csvg width='24' height='24' stroke='%23000' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_V8m1%7Btransform-origin:center;animation:spinner_zKoa 2s linear infinite%7D.spinner_V8m1 circle%7Bstroke-linecap:round;animation:spinner_YpZS 1.5s ease-out infinite%7D%40keyframes spinner_zKoa%7B100%25%7Btransform:rotate(360deg)%7D%7D%40keyframes spinner_YpZS%7B0%25%7Bstroke-dasharray:0 150;stroke-dashoffset:0%7D47.5%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-16%7D95%25%2C100%25%7Bstroke-dasharray:42 150;stroke-dashoffset:-59%7D%7D%3C%2Fstyle%3E%3Cg class='spinner_V8m1'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3'%3E%3C%2Fcircle%3E%3C%2Fg%3E%3C%2Fsvg%3E\\");
}

.loading-dots {
  mask-image: url(\\"data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_qM83%7Banimation:spinner_8HQG 1.05s infinite%7D.spinner_oXPr%7Banimation-delay:.1s%7D.spinner_ZTLf%7Banimation-delay:.2s%7D@keyframes spinner_8HQG%7B0%25,57.14%25%7Banimation-timing-function:cubic-bezier(0.33,.66,.66,1);transform:translate(0)%7D28.57%25%7Banimation-timing-function:cubic-bezier(0.33,0,.66,.33);transform:translateY(-6px)%7D100%25%7Btransform:translate(0)%7D%7D%3C/style%3E%3Ccircle class='spinner_qM83' cx='4' cy='12' r='3'/%3E%3Ccircle class='spinner_qM83 spinner_oXPr' cx='12' cy='12' r='3'/%3E%3Ccircle class='spinner_qM83 spinner_ZTLf' cx='20' cy='12' r='3'/%3E%3C/svg%3E\\");
}

.loading-ring {
  mask-image: url(\\"data:image/svg+xml,%3Csvg width='44' height='44' viewBox='0 0 44 44' xmlns='http://www.w3.org/2000/svg' stroke='%23fff'%3E%3Cg fill='none' fill-rule='evenodd' stroke-width='2'%3E%3Ccircle cx='22' cy='22' r='1'%3E%3Canimate attributeName='r' begin='0s' dur='1.8s' values='1; 20' calcMode='spline' keyTimes='0; 1' keySplines='0.165, 0.84, 0.44, 1' repeatCount='indefinite' /%3E%3Canimate attributeName='stroke-opacity' begin='0s' dur='1.8s' values='1; 0' calcMode='spline' keyTimes='0; 1' keySplines='0.3, 0.61, 0.355, 1' repeatCount='indefinite' /%3E%3C/circle%3E%3Ccircle cx='22' cy='22' r='1'%3E%3Canimate attributeName='r' begin='-0.9s' dur='1.8s' values='1; 20' calcMode='spline' keyTimes='0; 1' keySplines='0.165, 0.84, 0.44, 1' repeatCount='indefinite' /%3E%3Canimate attributeName='stroke-opacity' begin='-0.9s' dur='1.8s' values='1; 0' calcMode='spline' keyTimes='0; 1' keySplines='0.3, 0.61, 0.355, 1' repeatCount='indefinite' /%3E%3C/circle%3E%3C/g%3E%3C/svg%3E\\");
}

.loading-ball {
  mask-image: url(\\"data:image/svg+xml,%0A%3Csvg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_rXNP%7Banimation:spinner_YeBj .8s infinite%7D@keyframes spinner_YeBj%7B0%25%7Banimation-timing-function:cubic-bezier(0.33,0,.66,.33);cy:5px%7D46.875%25%7Bcy:20px;rx:4px;ry:4px%7D50%25%7Banimation-timing-function:cubic-bezier(0.33,.66,.66,1);cy:20.5px;rx:4.8px;ry:3px%7D53.125%25%7Brx:4px;ry:4px%7D100%25%7Bcy:5px%7D%7D%3C/style%3E%3Cellipse class='spinner_rXNP' cx='12' cy='5' rx='4' ry='4'/%3E%3C/svg%3E\\");
}

.loading-bars {
  mask-image: url(\\"data:image/svg+xml,%0A%3Csvg width='24' height='24' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cstyle%3E.spinner_hzlK%7Banimation:spinner_vc4H .8s linear infinite;animation-delay:-.8s%7D.spinner_koGT%7Banimation-delay:-.65s%7D.spinner_YF1u%7Banimation-delay:-.5s%7D@keyframes spinner_vc4H%7B0%25%7By:1px;height:22px%7D93.75%25%7By:5px;height:14px;opacity:.2%7D%7D%3C/style%3E%3Crect class='spinner_hzlK' x='1' y='1' width='6' height='22'/%3E%3Crect class='spinner_hzlK spinner_koGT' x='9' y='1' width='6' height='22'/%3E%3Crect class='spinner_hzlK spinner_YF1u' x='17' y='1' width='6' height='22'/%3E%3C/svg%3E\\");
}

.loading-infinity {
  mask-image: url(\\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' style='shape-rendering: auto;' width='200px' height='200px' viewBox='0 0 100 100' preserveAspectRatio='xMidYMid'%3E%3Cpath fill='none' stroke='%230a0a0a' stroke-width='10' stroke-dasharray='205.271142578125 51.317785644531256' d='M24.3 30C11.4 30 5 43.3 5 50s6.4 20 19.3 20c19.3 0 32.1-40 51.4-40 C88.6 30 95 43.3 95 50s-6.4 20-19.3 20C56.4 70 43.6 30 24.3 30z' stroke-linecap='round' style='transform:scale(0.8);transform-origin:50px 50px'%3E%3Canimate attributeName='stroke-dashoffset' repeatCount='indefinite' dur='2s' keyTimes='0;1' values='0;256.58892822265625'%3E%3C/animate%3E%3C/path%3E%3C/svg%3E\\");
}

.loading-xs {
  @apply w-4;
}

.loading-sm {
  @apply w-5;
}

.loading-md {
  @apply w-6;
}

.loading-lg {
  @apply w-10;
}"
`;

exports[`mask > snap 1`] = `
".mask-squircle {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M100 0C20 0 0 20 0 100s20 100 100 100 100-20 100-100S180 0 100 0Z'/%3e%3c/svg%3e\\");
}
.mask-decagon {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='192' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m96 0 58.779 19.098 36.327 50v61.804l-36.327 50L96 200l-58.779-19.098-36.327-50V69.098l36.327-50z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-diamond {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m100 0 100 100-100 100L0 100z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-heart {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='185' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M100 184.606a15.384 15.384 0 0 1-8.653-2.678C53.565 156.28 37.205 138.695 28.182 127.7 8.952 104.264-.254 80.202.005 54.146.308 24.287 24.264 0 53.406 0c21.192 0 35.869 11.937 44.416 21.879a2.884 2.884 0 0 0 4.356 0C110.725 11.927 125.402 0 146.594 0c29.142 0 53.098 24.287 53.4 54.151.26 26.061-8.956 50.122-28.176 73.554-9.023 10.994-25.383 28.58-63.165 54.228a15.384 15.384 0 0 1-8.653 2.673Z' fill='black' fill-rule='nonzero'/%3e%3c/svg%3e\\");
}
.mask-hexagon {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='182' height='201' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M.3 65.486c0-9.196 6.687-20.063 14.211-25.078l61.86-35.946c8.36-5.016 20.899-5.016 29.258 0l61.86 35.946c8.36 5.015 14.211 15.882 14.211 25.078v71.055c0 9.196-6.687 20.063-14.211 25.079l-61.86 35.945c-8.36 4.18-20.899 4.18-29.258 0L14.51 161.62C6.151 157.44.3 145.737.3 136.54V65.486Z' fill='black' fill-rule='nonzero'/%3e%3c/svg%3e\\");
}
.mask-hexagon-2 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='182' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M64.786 181.4c-9.196 0-20.063-6.687-25.079-14.21L3.762 105.33c-5.016-8.36-5.016-20.9 0-29.259l35.945-61.86C44.723 5.851 55.59 0 64.786 0h71.055c9.196 0 20.063 6.688 25.079 14.211l35.945 61.86c4.18 8.36 4.18 20.899 0 29.258l-35.945 61.86c-4.18 8.36-15.883 14.211-25.079 14.211H64.786Z' fill='black' fill-rule='nonzero'/%3e%3c/svg%3e\\");
}
.mask-circle {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle fill='black' cx='100' cy='100' r='100' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-parallelogram {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='154' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M46.154 0H200l-46.154 153.846H0z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-parallelogram-2 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='154' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M153.846 0H0l46.154 153.846H200z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-parallelogram-3 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='154' height='201' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M.077 47.077v153.846l153.846-46.154V.923z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-parallelogram-4 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='154' height='201' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M153.923 47.077v153.846L.077 154.77V.923z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-pentagon {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='192' height='181' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m96 0 95.106 69.098-36.327 111.804H37.22L.894 69.098z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-square {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M0 0h200v200H0z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-star {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='192' height='180' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m96 137.263-58.779 42.024 22.163-68.389L.894 68.481l72.476-.243L96 0l22.63 68.238 72.476.243-58.49 42.417 22.163 68.389z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-star-2 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='192' height='180' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m96 153.044-58.779 26.243 7.02-63.513L.894 68.481l63.117-13.01L96 0l31.989 55.472 63.117 13.01-43.347 47.292 7.02 63.513z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-triangle {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='174' height='149' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m87 148.476-86.603.185L43.86 74.423 87 0l43.14 74.423 43.463 74.238z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-triangle-2 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='174' height='150' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m87 .738 86.603-.184-43.463 74.238L87 149.214 43.86 74.792.397.554z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-triangle-3 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='150' height='174' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m149.369 87.107.185 86.603-74.239-43.463L.893 87.107l74.422-43.14L149.554.505z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}
.mask-triangle-4 {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='150' height='174' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='M.631 87.107.446.505l74.239 43.462 74.422 43.14-74.422 43.14L.446 173.71z' fill-rule='evenodd'/%3e%3c/svg%3e\\");
}"
`;

exports[`menu > snap 1`] = `
".menu {
  @apply p-2;
}

:where(.menu li:empty) {
  @apply bg-base-content/10;
  margin: 0.5rem 1rem;
  height: 1px;
}

.menu :where(li ul) {
  @apply ml-4 pl-2;
}
.menu :where(li ul):before {
  @apply bg-base-content/10 absolute bottom-3 left-0 top-3 w-px;
  content: \\"\\";
}

.menu :where(li:not(.menu-title) > *:not(ul):not(details):not(.menu-title)),
.menu :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
  @apply rounded-btn px-4 py-2 text-left transition duration-200 ease-out;
  text-wrap: balance;
}

:where(.menu li:not(.menu-title):not(.disabled) > *:not(ul):not(details):not(.menu-title)):not(summary):not(.active).focus, :where(.menu li:not(.menu-title):not(.disabled) > *:not(ul):not(details):not(.menu-title)):not(summary):not(.active):focus, :where(.menu li:not(.menu-title):not(.disabled) > *:not(ul):not(details):not(.menu-title)):is(summary):not(.active):focus-visible,
:where(.menu li:not(.menu-title):not(.disabled) > details > summary:not(.menu-title)):not(summary):not(.active).focus,
:where(.menu li:not(.menu-title):not(.disabled) > details > summary:not(.menu-title)):not(summary):not(.active):focus,
:where(.menu li:not(.menu-title):not(.disabled) > details > summary:not(.menu-title)):is(summary):not(.active):focus-visible {
  @apply bg-base-content/10 text-base-content cursor-pointer outline-none;
}
@media (hover: hover) {
  :where(.menu li:not(.menu-title):not(.disabled) > *:not(ul):not(details):not(.menu-title)):not(.active):hover,
  :where(.menu li:not(.menu-title):not(.disabled) > details > summary:not(.menu-title)):not(.active):hover {
    @apply bg-base-content/10 text-base-content cursor-pointer outline-none;
  }
}

.menu li > *:not(ul):not(.menu-title):not(details):active,
.menu li > *:not(ul):not(.menu-title):not(details).active,
.menu li > details > summary:active {
  @apply bg-neutral text-neutral-content [@media(hover:hover)]:bg-neutral [@media(hover:hover)]:text-neutral-content;
}

.menu li.disabled {
  @apply text-base-content/30;
}

.menu :where(li > details > summary)::-webkit-details-marker {
  @apply hidden;
}

.menu :where(li > details > summary):after,
.menu :where(li > .menu-dropdown-toggle):after {
  @apply justify-self-end;
  display: block;
  margin-top: -0.5rem;
  height: 0.5rem;
  width: 0.5rem;
  transform: rotate(45deg);
  transition-property: transform, margin-top;
  transition-duration: 0.3s;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  content: \\"\\";
  transform-origin: 75% 75%;
  box-shadow: 2px 2px;
  pointer-events: none;
}

.menu :where(li > details[open] > summary):after,
.menu :where(li > .menu-dropdown-toggle.menu-dropdown-show):after {
  transform: rotate(225deg);
  margin-top: 0;
}

.menu-title {
  @apply text-base-content/40 px-4 py-2 text-sm font-bold;
}"
`;

exports[`mockup > snap 1`] = `
".mockup-code {
  @apply bg-neutral text-neutral-content rounded-box min-w-[18rem] py-5;
}
.mockup-code:before {
  content: \\"\\";
  @apply mb-4 block h-3 w-3 rounded-full opacity-30;
  box-shadow: 1.4em 0, 2.8em 0, 4.2em 0;
}
.mockup-code pre {
  @apply pr-5;
}
.mockup-code pre:before {
  content: \\"\\";
  margin-right: 2ch;
}
.mockup-code pre[data-prefix]:before {
  content: attr(data-prefix);
  @apply w-8 opacity-50;
}
.mockup-window {
  @apply rounded-box pt-5;
}
.mockup-window:before {
  content: \\"\\";
  @apply mb-4 block aspect-square h-3 rounded-full opacity-30;
  box-shadow: 1.4em 0, 2.8em 0, 4.2em 0;
}
.mockup-phone {
  display: inline-block;
  border: 4px solid #444;
  border-radius: 50px;
  background-color: #000;
  padding: 10px;
  margin: 0 auto;
  overflow: hidden;
}
.mockup-phone .camera {
  position: relative;
  top: 0px;
  left: 0px;
  background: #000;
  height: 25px;
  width: 150px;
  margin: 0 auto;
  border-bottom-left-radius: 17px;
  border-bottom-right-radius: 17px;
  z-index: 11;
}
.mockup-phone .camera:before {
  content: \\"\\";
  position: absolute;
  top: 35%;
  left: 50%;
  width: 50px;
  height: 4px;
  border-radius: 5px;
  background-color: #0c0b0e;
  transform: translate(-50%, -50%);
}
.mockup-phone .camera:after {
  content: \\"\\";
  position: absolute;
  top: 20%;
  left: 70%;
  width: 8px;
  height: 8px;
  border-radius: 5px;
  background-color: #0f0b25;
}
.mockup-phone .display {
  overflow: hidden;
  border-radius: 40px;
  margin-top: -25px;
}
.mockup-browser {
  @apply rounded-box;
}
.mockup-browser .mockup-browser-toolbar {
  @apply my-3 inline-flex w-full items-center pr-[1.4em];
}
.mockup-browser .mockup-browser-toolbar:before {
  content: \\"\\";
  @apply mr-[4.8rem] inline-block aspect-square h-3 rounded-full opacity-30;
  box-shadow: 1.4em 0, 2.8em 0, 4.2em 0;
}
.mockup-browser .mockup-browser-toolbar .input {
  @apply bg-base-200 relative mx-auto block h-7 w-96 overflow-hidden text-ellipsis whitespace-nowrap pl-8;
}
.mockup-browser .mockup-browser-toolbar .input:before {
  content: \\"\\";
  @apply absolute left-2 top-1/2 aspect-square h-3 -translate-y-1/2 rounded-full border-2 border-current opacity-60;
}
.mockup-browser .mockup-browser-toolbar .input:after {
  content: \\"\\";
  @apply absolute left-5 top-1/2 h-2 translate-y-1/4 -rotate-45 rounded-full border border-current opacity-60;
}"
`;

exports[`modal > snap 1`] = `
".modal {
  @apply bg-transparent text-[inherit] duration-200 ease-out;
  transition-property: transform, opacity, visibility;
  overflow-y: hidden;
  overscroll-behavior: contain;
}
.modal:not(dialog:not(.modal-open)), .modal::backdrop {
  background-color: rgba(0, 0, 0, 0.3);
  animation: modal-pop 0.2s ease-out;
}

.modal-backdrop {
  @apply -z-[1] col-start-1 row-start-1 grid self-stretch justify-self-stretch text-transparent;
}

.modal-box {
  @apply bg-base-100 rounded-b-box rounded-t-box col-start-1 row-start-1 w-11/12 max-w-lg scale-90 transform p-6 transition duration-200 ease-out;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  overflow-y: auto;
  overscroll-behavior: contain;
}

.modal-open .modal-box,
.modal-toggle:checked + .modal .modal-box,
.modal:target .modal-box,
.modal[open] .modal-box {
  @apply translate-y-0 scale-100;
}

.modal-action {
  @apply mt-6 justify-end space-x-2;
}

@keyframes modal-pop {
  0% {
    opacity: 0;
  }
}"
`;

exports[`navbar > snap 1`] = `
".navbar {
  padding: var(--ice-navbar-padding, 0.5rem);
  min-height: 4rem;
  @apply w-full;
}"
`;

exports[`progress > snap 1`] = `
".progress {
  @apply rounded-box bg-base-content/20 h-2;
}
.progress::-moz-progress-bar {
  @apply bg-base-content rounded-box;
}
.progress-primary::-moz-progress-bar {
  @apply bg-primary rounded-box;
}
.progress-info::-moz-progress-bar {
  @apply bg-info rounded-box;
}
.progress-success::-moz-progress-bar {
  @apply bg-success rounded-box;
}
.progress-warning::-moz-progress-bar {
  @apply bg-warning rounded-box;
}
.progress-error::-moz-progress-bar {
  @apply bg-error rounded-box;
}
.progress-neutral::-moz-progress-bar {
  @apply bg-neutral rounded-box;
}
.progress::-webkit-progress-bar {
  @apply rounded-box bg-transparent;
}
.progress::-webkit-progress-value {
  @apply bg-base-content rounded-box;
}
.progress-primary::-webkit-progress-value {
  @apply bg-primary;
}
.progress-info::-webkit-progress-value {
  @apply bg-info;
}
.progress-success::-webkit-progress-value {
  @apply bg-success;
}
.progress-warning::-webkit-progress-value {
  @apply bg-warning;
}
.progress-error::-webkit-progress-value {
  @apply bg-error;
}
.progress-neutral::-webkit-progress-value {
  @apply bg-neutral;
}

.progress:indeterminate {
  background-image: repeating-linear-gradient(90deg, var(--ice-progress-color) -1%, var(--ice-progress-color) 10%, transparent 10%, transparent 90%);
  background-size: 200%;
  background-position-x: 15%;
  animation: progress-loading 5s ease-in-out infinite;
}

.progress:indeterminate::-moz-progress-bar {
  @apply bg-transparent;
  background-image: repeating-linear-gradient(90deg, var(--ice-progress-color) -1%, var(--ice-progress-color) 10%, transparent 10%, transparent 90%);
  background-size: 200%;
  background-position-x: 15%;
  animation: progress-loading 5s ease-in-out infinite;
}

@keyframes progress-loading {
  50% {
    background-position-x: -115%;
  }
}"
`;

exports[`radial-progress > snap 1`] = `
".radial-progress {
  --ice-value: 0;
  --ice-size: 5rem;
  --ice-thickness: calc(var(--ice-size) / 10);
}

.radial-progress:after {
  @apply bg-current;
}"
`;

exports[`radio > snap 1`] = `
"/* backward compatibility */
.radio-mark {
  @apply hidden;
}"
`;

exports[`range > snap 1`] = `""`;

exports[`rating > snap 1`] = `
".rating input {
  @apply appearance-none;
  -webkit-appearance: none;
}
.rating :where(input) {
  animation: rating-pop var(--ice-animation-input, 0.25s) ease-out;
  @apply bg-base-content h-6 w-6 bg-opacity-100;
}
.rating .rating-hidden {
  @apply w-2 bg-transparent;
}
.rating input:checked ~ input,
.rating input[aria-checked=true] ~ input {
  @apply bg-opacity-20;
}
.rating input:focus-visible {
  @apply transition-transform duration-300 ease-out;
  transform: translateY(-0.125em);
}
.rating input:active:focus {
  animation: none;
}
.rating input:active:focus {
  transform: translateY(-0.125em);
}

.rating-half :where(input:not(.rating-hidden)) {
  @apply w-3;
}

@keyframes rating-pop {
  0% {
    transform: translateY(-0.125em);
  }
  40% {
    transform: translateY(-0.125em);
  }
  100% {
    transform: translateY(0);
  }
}"
`;

exports[`select > snap 1`] = `""`;

exports[`stack > snap 1`] = `
".stack {
  @apply place-items-center items-end;
}
.stack > * {
  @apply w-full;
}
.stack > * {
  @apply opacity-60;
}
.stack > *:nth-child(2) {
  @apply opacity-80;
}
.stack > *:nth-child(1) {
  @apply opacity-100;
}"
`;

exports[`stat > snap 1`] = `
".stats {
  @apply bg-base-100 text-base-content rounded-box;
}

:where(.stats) {
  @apply divide-x divide-y-0 overflow-x-auto;
}

.stat {
  @apply border-base-content gap-x-4 border-opacity-10 px-6 py-4;
}
.stat-title {
  @apply text-base-content/60;
}
.stat-value {
  @apply text-4xl font-extrabold;
}
.stat-desc {
  @apply text-base-content/60 text-xs;
}
.stat-actions {
  @apply mt-4;
}

/* .stat + .stat {
  @apply border-l border-base-content border-opacity-10;
}
.stats.grid-flow-row {
  .stat + .stat {
    @apply border-l-0 border-t;
  }
} */"
`;

exports[`steps > snap 1`] = `
".steps {
  /* &,
  &-horizontal{ */
  /* } */
  /* &-vertical{
    .step {
      gap: .5rem;
      grid-template-columns: 40px 1fr;
      grid-template-rows: auto;
      min-height: 4rem;
      justify-items: start;
      &:before {
        @apply w-2 h-full top-0 transform -translate-y-1/2 -translate-x-1/2;
        margin-left: 50%;
      }
    }
  } */
}
.steps .step {
  grid-template-rows: 40px 1fr;
  grid-template-columns: auto;
  min-width: 4rem;
}
.steps .step:before {
  @apply bg-base-300 text-base-content top-0 col-start-1 row-start-1 h-2 w-full transform;
  content: \\"\\";
  margin-left: -100%;
}
.steps .step:after {
  content: counter(step);
  counter-increment: step;
  z-index: 1;
  @apply bg-base-300 text-base-content relative col-start-1 row-start-1 grid h-8 w-8 place-items-center place-self-center rounded-full;
}
.steps .step:first-child:before {
  content: none;
}
.steps .step[data-content]:after {
  content: attr(data-content);
}
.steps .step-neutral + .step-neutral:before,
.steps .step-neutral:after {
  @apply bg-neutral text-neutral-content;
}
.steps .step-primary + .step-primary:before,
.steps .step-primary:after {
  @apply bg-primary text-primary-content;
}
.steps .step-info + .step-info:before {
  @apply bg-info;
}
.steps .step-info:after {
  @apply bg-info text-info-content;
}
.steps .step-success + .step-success:before {
  @apply bg-success;
}
.steps .step-success:after {
  @apply bg-success text-success-content;
}
.steps .step-warning + .step-warning:before {
  @apply bg-warning;
}
.steps .step-warning:after {
  @apply bg-warning text-warning-content;
}
.steps .step-error + .step-error:before {
  @apply bg-error;
}
.steps .step-error:after {
  @apply bg-error text-error-content;
}"
`;

exports[`swap > snap 1`] = `
".swap {
  @apply cursor-pointer;
}

.swap > * {
  @apply duration-300 ease-out;
  transition-property: transform, opacity;
}

.swap-rotate .swap-on,
.swap-rotate .swap-indeterminate,
.swap-rotate input:indeterminate ~ .swap-on {
  @apply rotate-45;
}

.swap-rotate input:checked ~ .swap-off,
.swap-active:where(.swap-rotate) .swap-off,
.swap-rotate input:indeterminate ~ .swap-off {
  @apply -rotate-45;
}

.swap-rotate input:checked ~ .swap-on,
.swap-active:where(.swap-rotate) .swap-on,
.swap-rotate input:indeterminate ~ .swap-indeterminate {
  @apply rotate-0;
}

.swap-flip {
  transform-style: preserve-3d;
  perspective: 16em;
}

.swap-flip .swap-on,
.swap-flip .swap-indeterminate,
.swap-flip input:indeterminate ~ .swap-on {
  transform: rotateY(180deg);
  backface-visibility: hidden;
  @apply opacity-100;
}

.swap-flip input:checked ~ .swap-off,
.swap-active:where(.swap-flip) .swap-off,
.swap-flip input:indeterminate ~ .swap-off {
  transform: rotateY(-180deg);
  backface-visibility: hidden;
  @apply opacity-100;
}

.swap-flip input:checked ~ .swap-on,
.swap-active:where(.swap-flip) .swap-on,
.swap-flip input:indeterminate ~ .swap-indeterminate {
  transform: rotateY(0deg);
}"
`;

exports[`tab > snap 1`] = `
".tab {
  @apply text-opacity-50 [@media(hover:hover)]:hover:text-opacity-100;
  --ice-tab-color: hsl(var(--ice-bc) / var(--tw-text-opacity, 1));
  --ice-tab-bg: hsl(var(--ice-b1) / var(--tw-bg-opacity, 1));
  --ice-tab-border-color: hsl(var(--ice-b3) / var(--tw-bg-opacity, 1));
  color: var(--ice-tab-color);
  padding-left: var(--ice-tab-padding, 1rem);
  padding-right: var(--ice-tab-padding, 1rem);
  /* disabled */
}
.tab.tab-active:not(.tab-disabled):not([disabled]) {
  @apply border-base-content border-opacity-100 text-opacity-100;
}
.tab:focus {
  @apply outline-none;
}
.tab:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: -3px;
}
.tab:focus-visible.tab-lifted {
  border-bottom-right-radius: var(--ice-tab-radius, 0.5rem);
  border-bottom-left-radius: var(--ice-tab-radius, 0.5rem);
}
.tab-disabled, .tab[disabled] {
  @apply text-base-content cursor-not-allowed text-opacity-20;
}
@media (hover: hover) {
  .tab[disabled], .tab[disabled]:hover {
    @apply text-base-content cursor-not-allowed text-opacity-20;
  }
}

.tab-bordered {
  @apply border-base-content border-opacity-20;
  border-style: solid;
  border-bottom-width: calc(var(--ice-tab-border, 1px) + 1px);
}

.tab-lifted {
  border: var(--ice-tab-border, 1px) solid transparent;
  border-width: 0 0 var(--ice-tab-border, 1px) 0;
  border-top-left-radius: var(--ice-tab-radius, 0.5rem);
  border-top-right-radius: var(--ice-tab-radius, 0.5rem);
  border-bottom-color: var(--ice-tab-border-color);
  padding-left: var(--ice-tab-padding, 1rem);
  padding-right: var(--ice-tab-padding, 1rem);
  padding-top: var(--ice-tab-border, 1px);
}
.tab-lifted.tab-active:not(.tab-disabled):not([disabled]) {
  background-color: var(--ice-tab-bg);
  border-width: var(--ice-tab-border, 1px) var(--ice-tab-border, 1px) 0 var(--ice-tab-border, 1px);
  border-left-color: var(--ice-tab-border-color);
  border-right-color: var(--ice-tab-border-color);
  border-top-color: var(--ice-tab-border-color);
  padding-left: calc(var(--ice-tab-padding, 1rem) - var(--ice-tab-border, 1px));
  padding-right: calc(var(--ice-tab-padding, 1rem) - var(--ice-tab-border, 1px));
  padding-bottom: var(--ice-tab-border, 1px);
  padding-top: 0;
}
.tab-lifted.tab-active:not(.tab-disabled):not([disabled]):before, .tab-lifted.tab-active:not(.tab-disabled):not([disabled]):after {
  z-index: 1;
  content: \\"\\";
  display: block;
  position: absolute;
  width: var(--ice-tab-radius, 0.5rem);
  height: var(--ice-tab-radius, 0.5rem);
  bottom: 0;
  --ice-tab-grad: calc(68% - var(--ice-tab-border, 1px));
  --ice-tab-corner-bg: radial-gradient(
    circle at var(--ice-circle-pos),
    transparent var(--ice-tab-grad),
    var(--ice-tab-border-color) calc(var(--ice-tab-grad) + 0.3px),
    var(--ice-tab-border-color) calc(var(--ice-tab-grad) + var(--ice-tab-border, 1px)),
    var(--ice-tab-bg) calc(var(--ice-tab-grad) + var(--ice-tab-border, 1px) + 0.3px)
  );
}
.tab-lifted.tab-active:not(.tab-disabled):not([disabled]):before {
  left: calc(var(--ice-tab-radius, 0.5rem) * -1);
  --ice-circle-pos: top left;
  background-image: var(--ice-tab-corner-bg);
  /* RTL quick fix */
}
[dir=rtl] .tab-lifted.tab-active:not(.tab-disabled):not([disabled]):before {
  --ice-circle-pos: top right;
}
.tab-lifted.tab-active:not(.tab-disabled):not([disabled]):after {
  right: calc(var(--ice-tab-radius, 0.5rem) * -1);
  --ice-circle-pos: top right;
  background-image: var(--ice-tab-corner-bg);
  /* RTL quick fix */
}
[dir=rtl] .tab-lifted.tab-active:not(.tab-disabled):not([disabled]):after {
  --ice-circle-pos: top left;
}
.tab-lifted.tab-active:not(.tab-disabled):not([disabled]):first-child:before {
  background: none;
}
.tab-lifted.tab-active:not(.tab-disabled):not([disabled]):last-child:after {
  background: none;
}

.tab-lifted.tab-active:not(.tab-disabled):not([disabled]) + .tab-lifted.tab-active:not(.tab-disabled):not([disabled]):before {
  background: none;
}

.tabs-boxed {
  @apply bg-base-200 rounded-btn p-1;
}
.tabs-boxed .tab {
  @apply rounded-btn;
}
.tabs-boxed .tab-active:not(.tab-disabled):not([disabled]) {
  @apply bg-primary text-primary-content [@media(hover:hover)]:hover:text-primary-content;
}"
`;

exports[`table > snap 1`] = `
".table {
  @apply rounded-box text-left text-sm;
}
.table :where(th, td) {
  @apply px-4 py-3 align-middle;
}
.table tr.active,
.table tr.active:nth-child(even), .table-zebra tbody tr:nth-child(even) {
  @apply bg-base-200;
}
.table tr.hover,
.table tr.hover:nth-child(even) {
  @apply [@media(hover:hover)]:hover:bg-base-200;
}
.table-zebra tr.active,
.table-zebra tr.active:nth-child(even), .table-zebra-zebra tbody tr:nth-child(even) {
  @apply bg-base-300;
}
.table-zebra tr.hover, .table-zebra tr.hover:nth-child(even) {
  @apply [@media(hover:hover)]:hover:bg-base-300;
}
.table :where(thead, tbody) :where(tr:not(:last-child)),
.table :where(thead, tbody) :where(tr:first-child:last-child) {
  @apply border-b-base-200 border-b;
}
.table :where(thead, tfoot) {
  @apply text-base-content/60 whitespace-nowrap text-xs font-bold;
}"
`;

exports[`textarea > snap 1`] = `
".textarea {
  @apply border-base-content bg-base-100 rounded-btn border border-opacity-0;
}
.textarea-bordered {
  @apply border-opacity-20;
}
.textarea:focus {
  @apply outline-base-content/20 outline outline-2 outline-offset-2;
}
.textarea-ghost {
  @apply bg-opacity-5;
}
.textarea-ghost:focus {
  @apply text-base-content bg-opacity-100;
  box-shadow: none;
}
.textarea-primary {
  @apply border-primary;
}
.textarea-primary:focus {
  @apply outline-primary;
}
.textarea-info {
  @apply border-info;
}
.textarea-info:focus {
  @apply outline-info;
}
.textarea-success {
  @apply border-success;
}
.textarea-success:focus {
  @apply outline-success;
}
.textarea-warning {
  @apply border-warning;
}
.textarea-warning:focus {
  @apply outline-warning;
}
.textarea-error {
  @apply border-error;
}
.textarea-error:focus {
  @apply outline-error;
}
.textarea-neutral {
  @apply border-neutral;
}
.textarea-neutral:focus {
  @apply outline-neutral;
}
.textarea-disabled, .textarea:disabled, .textarea[disabled] {
  @apply border-base-200 bg-base-200 placeholder-base-content cursor-not-allowed text-opacity-20 placeholder-opacity-20;
}"
`;

exports[`toast > snap 1`] = `
".toast {
  @apply gap-2 p-4;
}
.toast > * {
  animation: toast-pop 0.25s ease-out;
}

@keyframes toast-pop {
  0% {
    transform: scale(0.9);
    opacity: 0;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}"
`;

exports[`toggle > snap 1`] = `
"/* backward compatibility */
.toggle-mark {
  @apply hidden;
}"
`;
